--- a/package.json
+++ b/package.json
@@ -9,6 +9,19 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.7"
+    "@astrojs/react": "^4.4.2",
+    "@astrojs/tailwind": "^6.0.2",
+    "@phosphor-icons/react": "^2.1.10",
+    "@tailwindcss/vite": "^4.1.18",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "astro": "^5.16.7",
+    "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
+    "framer-motion": "^12.24.12",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "rss-parser": "^3.13.0",
+    "tailwindcss": "^3.4.1"
   }
 }
