--- a/.github/workflows/update-news.yml
+++ b/.github/workflows/update-news.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # FIX: Upgrade to Node.js 20 to support modern fetch/File APIs
+      
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
@@ -33,8 +33,8 @@ jobs:
 
       - name: Commit and Push Changes
         run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git config --global user.name "Yonathan Alula"
+          git config --global user.email "yonathanalulam@gmail.com"
           git add src/data/news.json
           git commit -m "🤖 Daily News Update" || echo "No news changes to commit"
           git push
